# kgpio

./: AUTHORS  CMakeLists.txt  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kgpiotest.cpp  testlightsensor.cpp  testthermosensor.cpp
scripts/: 93-gpio.rules  install-scripts.sh  set-gpio-permissions.sh
src/: CMakeLists.txt  gpiopin.cpp  gpiopin.h  gpiopin_p.h  kgpio.cpp  kgpio.h  kgpio_p.h  lightsensor.cpp  lightsensor.h  lightsensor_p.h  thermosensor.cpp  thermosensor.cpp.po3433  thermosensor.h  thermosensor_p.h
src/import/: CMakeLists.txt  kgpiocontroller.cpp  kgpiocontroller.h  kgpioplugin.cpp  kgpioplugin.h
src/import/qml/: qmldir
tests/: CMakeLists.txt  synctest.cpp
